...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aJF-XE-jwB">
                                        <rect key="frame" x="275" y="0.0" width="80" height="33"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="gRv-R1-0SB"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="15"/>
                                        <state key="normal" title="Settings">
                                            <color key="titleColor" red="0.76470588240000004" green="0.81176470590000005" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
                                            <color key="titleShadowColor" red="0.302985856" green="0.30444955579999999" blue="0.30152215630000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
                                        <connections>
                                            <segue destination="Sj3-da-iqA" kind="show" identifier="loadSettings" id="xSg-fQ-w2R">
                                                <segue key="commit" inheritsFrom="parent" id="oD5-tY-FEu"/>
...
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="JSS URL:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="pss-YH-8RX" userLabel="JSS URL">
                                                <rect key="frame" x="0.0" y="0.0" width="95" height="16"/>
                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Username:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="PTS-bz-zNh" userLabel="JSS Username">
                                                <rect key="frame" x="0.0" y="16" width="95" height="16"/>
                                                <fontDescription key="fontDescription" name="AvenirNext-Medium" family="Avenir Next" pointSize="14"/>
                                                <nil key="textColor"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Group ID: " textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="r8B-gh-fOS">
...
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="pia-Xg-Fjh" customClass="scanButton" customModule="jAlly" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="0.0" width="90" height="27"/>
                                        <constraints>
                                            <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="90" id="daY-ih-cer"/>
                                        </constraints>
                                        <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                        <state key="normal" title="Lookup User"/>
                                        <connections>
                                            <action selector="userToCheckPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="4fL-El-S0k"/>
                                        </connections>
                                    </button>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="kbM-j1-JJX" customClass="scanButton" customModule="jAlly" customModuleProvider="target">
                                        <rect key="frame" x="0.0" y="37" width="90" height="27"/>
...
                                        <color key="textColor" red="0.76470588240000004" green="0.81176470590000005" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NEf-Ql-jMg">
                                        <rect key="frame" x="316" y="0.0" width="39" height="33"/>
                                        <fontDescription key="fontDescription" name="Avenir-Black" family="Avenir" pointSize="15"/>
                                        <state key="normal" title="Close">
                                            <color key="titleColor" red="0.76470588240000004" green="0.81176470590000005" blue="0.87058823529999996" alpha="1" colorSpace="calibratedRGB"/>
                                        </state>
                                        <connections>
                                            <action selector="returnToMainPressed:" destination="Sj3-da-iqA" eventType="touchUpInside" id="ysH-YR-ny6"/>
                                        </connections>
                                    </button>
...
                                                <rect key="frame" x="298" y="22" width="45" height="30"/>
                                                <constraints>
                                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="45" id="0JR-QG-fDI"/>
                                                    <constraint firstAttribute="height" constant="30" id="6nX-G5-2rI"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="12"/>
                                                <state key="normal" title="Verify"/>
                                                <connections>
                                                    <action selector="checkUPPressed:" destination="Sj3-da-iqA" eventType="touchUpInside" id="ny2-Dz-bni"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
...
