//
//  jAllyUITests.swift
//  jAllyUITests
//
//  Created by Randy Saeks on 10/24/17.
//  Copyright © 2017 Randy Saeks. All rights reserved.
//

import XCTest

class jAllyUITests: XCTestCase {
        
    override func setUp() {
        super.setUp()
        
        // Put setup code here. This method is called before the invocation of each test method in the class.
        
        // In UI tests it is usually best to stop immediately when a failure occurs.
        continueAfterFailure = false
        // UI tests must launch the application that they test. Doing this in setup will make sure it happens for each test method.
        XCUIApplication().launch()

        // In UI tests it’s important to set the initial state - such as interface orientation - required for your tests before they run. The setUp method is a good place to do this.
        
        let app = XCUIApplication()
        setupSnapshot(app)
        app.launch()
    }
    
    override func tearDown() {
        // Put teardown code here. This method is called after the invocation of each test method in the class.
        super.tearDown()
    }
    
    func testExample() {
        // Use recording to get started writing UI tests.
        // Use XCTAssert and related functions to verify your tests produce the correct results.
        
        let app = XCUIApplication()
        snapshot("01OpeningScreen")
        app.buttons["Settings"].tap()
        app.buttons[" Check "].tap()
        app.buttons["Verify"].tap()
        snapshot("02SettingsScreen")
        app.buttons["Close"].tap()
        
        let usernameTextField = app.textFields["Username"]
        usernameTextField.tap()
        usernameTextField.typeText("ipadloaner")
        
        let lookupUserButton = app.buttons["Lookup User"]
        lookupUserButton.tap()
        snapshot("03InfoScreen")
        app.buttons["  Update Inventory  "].tap()
        app.buttons["  Send Blank Push  "].tap()
        snapshot("04AppActionScreen")

    }
    
}
